update fixes as per testing